--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "keypress": "^0.2.1",
+    "nodemon": "^1.19.1",
     "parse-multipart": "^1.0.4",
     "underscore": "^1.9.1"
   },
